--- a/src/main/resources/templates/presentantion/factura/createFactura.html
+++ b/src/main/resources/templates/presentantion/factura/createFactura.html
@@ -7,72 +7,154 @@
 <h1>[[#{factura.Title}]]</h1>
 <section class="marco-producto" >
 
-<div >
-    <p>[[#{search.Product}]]</p>
-    <form th:action="@{/presentantion/factura/searchProduct}" method="get">
+    <div >
+        <p>[[#{search.Product}]]</p>
+        <form th:action="@{/presentantion/factura/searchProduct}" method="get">
+            <label>
+                <input type="number" name="id" th:placeholder="#{view.Id.Product}" required/>
+            </label>
+            <input  type="submit" th:value="#{action.Search}"/>
+        </form>
+
+    </div>
+
+    <div th:if="${producto}">
+        <p><strong>[[#{producto.Id}]]:</strong> <span th:text="${producto.id}"></span></p>
+        <p><strong>[[#{producto.Description}]]:</strong> <span th:text="${producto.getDescription()}"></span></p>
+        <p><strong>[[#{producto.Price}]]:</strong> <span th:text="${producto.getPrice()}"></span></p>
+        <form th:action="@{/presentantion/factura/selectProduct}" method="post">
+            <input type="hidden" name="id" th:value="${producto.getId()}"/>
+            <input type="submit" th:value="#{select.Product}"/>
+        </form>
+    </div>
+
+
+
+    <div>
+        <p>[[#{search.Client}]]</p>
+        <form th:action="@{/presentantion/factura/searchCliente}" method="get">
+            <label>
+                <input type="number" name="id" th:placeholder="#{introduce.Id.Client}" required/>
+            </label>
+            <input type="submit" th:value="#{action.Search}"/>
+        </form>
+    </div>
+
+    <div th:if="${cliente}">
+        <h2> [[#{information.Client}]]</h2>
+        <p><strong>[[#{cliente.Id}]]:</strong> <span th:text="${cliente.getId()}"></span></p>
+        <p><strong>[[#{cliente.Name}]]:</strong> <span th:text="${cliente.getName()}"></span></p>
+        <p><strong>[[#{cliente.Direccion}]]:</strong> <span th:text="${cliente.getDireccion()}"></span></p>
+        <p><strong>[[#{cliente.Telefono}]]:</strong> <span th:text="${cliente.getTelefono()}"></span></p>
+        <p><strong>[[#{cliente.Email}]]:</strong> <span th:text="${cliente.getEmail()}"></span></p>
+        <form th:action="@{/presentantion/factura/selectCliente}" method="post">
+            <input type="text" name="id" th:value="${cliente.getId()}"/>
+            <input type="submit" th:value="#{select.Client}"/>
+        </form>
+    </div>
+
+    <h2>[[#{pay.Method}]]</h2>
+    <form th:action="@{/presentantion/factura/create}" method="post">
+        <input type="date" name="fecha" required/>
         <label>
-            <input type="number" name="id" th:placeholder="#{view.Id.Product}" required/>
+            <input  type="radio" id="efectivo" name="tipoPago" value="efectivo">
+            <img class="imagen-edit" src="/images/cash.png" alt="efectivo">
         </label>
-        <input  type="submit" th:value="#{action.Search}"/>
+        <label>
+            <input  type="radio" id="tarjeta" name="tipoPago" value="tarjeta">
+            <img class="imagen-edit" src="/images/card.png" alt="tarjeta">
+        </label>
+        <input type="submit" th:value="#{create.Factura}"/>
     </form>
 
+
+    <div th:if="${error}">
+        <p th:text="${error}"></p>
+    </div>
+</section>
+
+<footer th:replace="fragments/footer :: footer"></footer>
+</body>
+</html>
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+<head th:replace="fragments/head"><title>Facturas</title></head>
+
+
+<header th:replace="fragments/header :: header">&nbsp;</header>
+
+<div class="">
+    <p>Buscar Producto a agregar a la factura</p>
+    <form th:action="@{/presentantion/factura/searchProduct}" method="get">
+        <label>
+            <input type="number" name="id" placeholder="Introduce el ID del producto" required/>
+        </label>
+        <input type="submit" value="Buscar"/>
+    </form>
 </div>
 
 <div th:if="${producto}">
-    <p><strong>[[#{producto.Code}]]:</strong> <span th:text="${producto.getCode()}"></span></p>
+    <p><strong>[[#{producto.Code}]]:</strong> <span th:text="${producto.getId()}"></span></p>
     <p><strong>[[#{producto.Description}]]:</strong> <span th:text="${producto.getDescription()}"></span></p>
     <p><strong>[[#{producto.Price}]]:</strong> <span th:text="${producto.getPrice()}"></span></p>
     <form th:action="@{/presentantion/factura/selectProduct}" method="post">
         <input type="hidden" name="id" th:value="${producto.getId()}"/>
-        <input type="submit" th:value="#{select.Product}"/>
+        <input type="submit" value="Seleccionar Producto"/>
     </form>
 </div>
 
+&lt;!&ndash; Sección para mostrar el total &ndash;&gt;
 
 
-<div>
-    <p>[[#{search.Client}]]</p>
+&lt;!&ndash; Sección para buscar cliente &ndash;&gt;
+<div class="search-Cliente">
+    <p>Buscar Cliente al cual agregarle producto</p>
     <form th:action="@{/presentantion/factura/searchCliente}" method="get">
         <label>
-            <input type="number" name="id" th:placeholder="#{introduce.Id.Client}" required/>
+            <input type="number" name="id" placeholder="Introduce la cédula del cliente" required/>
         </label>
-        <input type="submit" th:value="#{action.Search}"/>
+        <input type="submit" value="Buscar"/>
     </form>
 </div>
 
-    <div th:if="${cliente}">
-    <h2> [[#{information.Client}]]</h2>
+&lt;!&ndash; Sección para mostrar información del cliente &ndash;&gt;
+<div th:if="${cliente}">
+    <h2>Información del Cliente</h2>
     <p><strong>[[#{cliente.Id}]]:</strong> <span th:text="${cliente.getId()}"></span></p>
     <p><strong>[[#{cliente.Name}]]:</strong> <span th:text="${cliente.getName()}"></span></p>
     <p><strong>[[#{cliente.Direccion}]]:</strong> <span th:text="${cliente.getDireccion()}"></span></p>
     <p><strong>[[#{cliente.Telefono}]]:</strong> <span th:text="${cliente.getTelefono()}"></span></p>
     <p><strong>[[#{cliente.Email}]]:</strong> <span th:text="${cliente.getEmail()}"></span></p>
     <form th:action="@{/presentantion/factura/selectCliente}" method="post">
-        <input type="text" name="id" th:value="${cliente.getId()}"/>
-        <input type="submit" th:value="#{select.Client}"/>
+        <input type="hidden" name="id" th:value="${cliente.getId()}"/>
+        <input type="submit" value="Seleccionar Cliente"/>
     </form>
 </div>
 
-<h2>[[#{pay.Method}]]</h2>
+&lt;!&ndash; Formulario para confirmar factura &ndash;&gt;
+<h2>Método de Pago</h2>
 <form th:action="@{/presentantion/factura/create}" method="post">
     <input type="date" name="fecha" required/>
     <label>
-        <input  type="radio" id="efectivo" name="tipoPago" value="efectivo">
-        <img class="imagen-edit" src="/images/cash.png" alt="efectivo">
+        <input type="radio" id="efectivo" name="tipoPago" value="efectivo">
+        <label for="efectivo">Efectivo</label>
     </label>
     <label>
-        <input  type="radio" id="tarjeta" name="tipoPago" value="tarjeta">
-        <img class="imagen-edit" src="/images/card.png" alt="tarjeta">
+        <input type="radio" id="tarjeta" name="tipoPago" value="tarjeta">
+        <label for="tarjeta">Tarjeta</label>
     </label>
-    <input type="submit" th:value="#{create.Factura}"/>
+    <input type="submit" value="Crear Factura"/>
 </form>
 
-
-<div th:if="${error}">
+&lt;!&ndash; Sección para mostrar errores &ndash;&gt;
+<div th:if="${error}">               &lt;!&ndash; Esta sección causa conflicto con el multilenguaje&ndash;&gt;
     <p th:text="${error}"></p>
 </div>
-</section>
 
+&lt;!&ndash; Footer &ndash;&gt;
 <footer th:replace="fragments/footer :: footer"></footer>
 </body>
-</html>
+</html>-->
